Fix alignment for mission card due date

--- a/src/styles/_academy.scss
+++ b/src/styles/_academy.scss
@@ -20,8 +20,6 @@
   color: $cadet-color-3;
   .mission-info {
     background-color: $cadet-color-5;
-    .mission-info-description {
-      text-align: justify;
-    }
+    text-align: justify;
   }
 }
